--- a/org.eclipse.mylyn.team.git/plugin.xml
+++ b/org.eclipse.mylyn.team.git/plugin.xml
@@ -7,5 +7,11 @@
             class="org.eclipse.mylyn.internal.team.git.changesets.GitActiveChangeSetProvider">
       </activeChangeSetProvider>
    </extension>
+   <extension
+         point="org.eclipse.egit.ui.commitDialog">
+      <dialog
+            commitMessage="org.eclipse.mylyn.commit.CommitMessageProvider">
+      </dialog>
+   </extension>
 
 </plugin>
